fix(Buefy): 🐛  b-table overflow when last column is numeric

--- a/packages/buefy/scss/components/table.scss
+++ b/packages/buefy/scss/components/table.scss
@@ -136,6 +136,7 @@ $-css-vars-map: (
                 &.is-numeric {
                     flex-direction: row-reverse;
                     text-align: right;
+					width: 95%;
                     .icon {
                         margin-right: 0.5rem;
                         margin-left: 0;
